--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The NEW Way To Create Slide — 2025</title>
+  <title>The NEW Way To Create Slides — 2025</title>
   <meta name="description" content="A one‑file HTML/CSS/JS slide deck template that emulates d‑squared70’s AI‑generated‑presos site." />
   <style>
     :root{
